[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ode-dmg"
version = "0.0.1"
description = "Mechanistic ODE model for tumor analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==1.5.3", # Latest stable with numpy 1.x compatibility
    "numpy==1.24.4", 
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "lmfit>=1.2.0",
    "tqdm",
    "seaborn",
]

# Tell hatchling where your package is
[tool.hatch.build.targets.wheel]
packages = ["ode"]
include = [
    "data/*",
]